--- a/incident-report.html
+++ b/incident-report.html
@@ -685,40 +685,38 @@ const usernameInput = document.getElementById("username");
     });
 
 
-    async function uploadToImgbb(base64Image, username) {
-      const apiKey = '14e51e0636e117beac224a32711adc49';
-      const url = `https://api.imgbb.com/1/upload?key=${apiKey}`;
+   async function uploadToImgbb(base64Image, username) {
+  const userToken = '14e51e0636e117beac224a32711adc49'; // <- Replace with your token
+  const url = `https://api.imgbb.com/1/upload?expiration=600&key=14e51e0636e117beac224a32711adc49`;
 
-      const base64 = base64Image.replace(/^data:image\/\w+;base64,/, '');
+  const base64 = base64Image.replace(/^data:image\/\w+;base64,/, '');
 
-      // Prepare timestamp
-      const now = new Date();
-      const timestamp = now.toISOString().replace(/:/g, '-'); // replace : to avoid issues
+  const now = new Date();
+  const timestamp = now.toISOString().replace(/:/g, '-');
+  const fileName = `${username}_${timestamp}.png`;
 
-      // Compose filename like username_timestamp.png
-      const fileName = `${username}_${timestamp}.png`;
+  const formData = new FormData();
+  formData.append('image', base64);
+  formData.append('name', fileName);
+  formData.append('user_token', userToken); // 👈 This links the upload to your account
 
-      const formData = new FormData();
-      formData.append('image', base64);
-      formData.append('name', fileName); // Note: ImgBB may ignore this
+  try {
+    const response = await fetch(url, {
+      method: 'POST',
+      body: formData
+    });
+    const result = await response.json();
 
-      try {
-        const response = await fetch(url, {
-          method: 'POST',
-          body: formData
-        });
-        const result = await response.json();
-
-        if (result.success) {
-          return result.data.url;
-        } else {
-          throw new Error('Upload failed');
-        }
-      } catch (error) {
-        alert("Failed to upload image: " + error.message);
-        return null;
-      }
+    if (result.success) {
+      return result.data.url;
+    } else {
+      throw new Error('Upload failed');
     }
+  } catch (error) {
+    alert("Failed to upload image: " + error.message);
+    return null;
+  }
+}
 
 
   document.getElementById('backBtn').addEventListener('click', () => {
@@ -734,5 +732,6 @@ const usernameInput = document.getElementById("username");
 </body>
 
 </html>
+
 
 
